ui: fix height of Input fields to 3rem // board > headline > set gap between search-bar and add-task-button to 2 rem (Figma)

--- a/src/app/pages/board/board.scss
+++ b/src/app/pages/board/board.scss
@@ -27,6 +27,10 @@
     ::ng-deep app-input-field {
       margin-bottom: 0;
     }
+
+    nav {
+      gap: 2rem;
+    }
   }
 }
 
