--- a/src/app/shared/ui/button/button.scss
+++ b/src/app/shared/ui/button/button.scss
@@ -15,6 +15,7 @@
   padding: 0.75rem;
   transition: $trans-default;
   font-weight: 400;
+  height: 3rem;
 
   @include for-size(lg) {
       padding: 0.75rem 1rem ;
